--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="project3">
                     <img src="img/project3.png" class="project-image2" alt="project">
                     <p class="tools-used mt-3">HTML,CSS,BOOTSTRAP</p>
-                    <p class="project-description">Multi-page Responsive Website</p>
+                    <p class="project-description">API-driven Mini Web Application</p>
                     <button class="btn btn_view text-light mb-3"  onClick="window.open('https://starbook-academy.herokuapp.com/');">View</button>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                             
                     Hello again! Thanks for scrolling this far!! 🤗 <br>
                     I recently graduated from <a href="https://kodego.ph/" class="fw-bolder" style="color: #fa709a;">Kodego</a> 
-                    and ranked <span class="fw-bold" style="color: #fa709a;">TOP 3 </span>among our batch.
+                    and ranked <span class="fw-bold" style="color: #fa709a;">TOP 3 </span>among our batch.<br>
 
                     Having started my freelance design career nearly two years ago, I've worked remotely for agencies or startups,
                     and worked with talented people to create digital products for businesses and consumers.
