--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 </div>
             </div>
-            <button class="btn btn_resume mt-5" onClick="window.open('');">
+            <button class="btn btn_resume mt-5" onClick="window.open('https://drive.google.com/file/d/12ZbsrqEqMUUTyaYdVt_MmJIPYf5rzvpV/view?usp=sharing');">
                 <span class="text">Resume</span>
             </button>
         </section>
