--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <button class="btn btn_resume mt-5" onClick="window.open('https://drive.google.com/file/d/1f5JJgiq_5gcezmARSWwAzgz7Jhca-cFn/view?usp=sharing');">
-                <span class="text">Resume</span>
+                <span class="text">Check my CV</span>
             </button>
         </section>
     </div>
