--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </h1>
 
                     <h4 class="personal-info mt-5 lh-lg">
-                        I'm a <span class="job-pisition">front-end web developer</span> with <span class="job-pisition">graphic design <br><br>& digital-marketing </span> background 👩🏻‍💻.<br>
+                        I am an <span class="job-pisition">Associate Software Engineer</span> with <span class="job-pisition">web & graphic design <br><br>& digital-marketing </span> background 👩🏻‍💻.<br>
                     </h4>
 
                 </div>
@@ -123,7 +123,7 @@
                     I recently graduated from <a href="https://kodego.ph/" class="fw-bolder" style="color: #fa709a;">Kodego</a> 
                     and ranked <span class="fw-bold" style="color: #fa709a;">TOP 3 </span>among our batch.<br>
 
-                    Having started my freelance design career nearly two years ago, I've worked remotely for agencies or startups,
+                    Having started my freelance design career for two years, I've worked remotely for agencies or startups,
                     and worked with talented people to create digital products for businesses and consumers.
                     <br><br><strong> I am naturally curious, and I strive to improve my skills one design problem at a time✨.</strong><br>
                 </h6>
