--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </h1>
 
                     <h4 class="personal-info mt-5 lh-lg">
-                        I am an <span class="job-pisition">Associate Software Engineer</span> with <span class="job-pisition">web & graphic design <br><br>& digital-marketing </span> background 👩🏻‍💻.<br>
+                        I am an <span class="job-pisition">Associate Software Engineer</span> with <span class="job-pisition">web/graphic design <br><br>& digital-marketing </span> background 👩🏻‍💻.<br>
                     </h4>
 
                 </div>
